too much for today

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,5 @@
-FROM python:3.4-alpine
-ADD code/ /code
-WORKDIR /code
+FROM tiangolo/uwsgi-nginx:python3.6-alpine3.7
+COPY code/ /app
+WORKDIR /app
 RUN apk add --no-cache gcc mailcap python3-dev build-base linux-headers pcre-dev postgresql-dev libffi-dev libressl-dev
 RUN pip install -r requirements.txt
-CMD ["python", "app.py"]
